<resources>
    <string name="app_name">ShoeStore</string>

    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>

    <string name="welcome">Welcome to Shoe Store</string>
    <string name="welcome_description">Your shoe store, in your hands.</string>
    <string name="go_to_store">Go to Shoe Store</string>

    <string name="instructions">Instructions</string>
    <string name="instructions_description">You dont need to get out of your home to buy a shoe!</string>

    <string name="floating_action_button_description">Go to shoe detail screen.</string>
    <string name="logout">Logout</string>

    <string name="details_title">Shoe Details</string>
    <string name="shoe_name">Shoe Name</string>
    <string name="company">Company</string>
    <string name="size">Size</string>
    <string name="description">Description</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>

    <string name="name_description">Name: %s</string>
    <string name="company_description">Company: %s</string>
    <string name="size_description">Size: %s</string>
    <string name="description_description">Description: %s</string>
</resources>
