<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <!--The layout is simple, so i used a linear layout-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal|center_vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/welcomeTitleTextView"
            style="@style/TextTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_large"
            android:text="@string/welcome" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/welcomeDescriptionTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_small"
            android:gravity="center"
            android:text="@string/welcome_description"
            android:textSize="@dimen/text_medium" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/enterButton"
            android:theme="@style/AppButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_small"
            android:text="@string/go_to_store"
            android:layout_gravity="bottom"/>

    </LinearLayout>
</layout>