<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <!--The layout is simple, so i used a linear layout-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal|center_vertical"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/instructionsTitleTextView"
            style="@style/TextTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_large"
            android:text="@string/instructions" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/instructionsDescriptionTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_small"
            android:layout_marginTop="48dp"
            android:gravity="center"
            android:text="@string/instructions_description"
            android:textSize="@dimen/text_medium" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/enterButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_small"
            android:text="@string/go_to_store"
            android:theme="@style/AppButton" />

    </LinearLayout>
</layout>