<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.udacity.shoestore.ShoeListViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/detailsTitleTextView"
            style="@style/TextTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_large"
            android:text="@string/details_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/shoeNameTextInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_small"
            app:layout_constraintBottom_toTopOf="@+id/companyTextInput"
            app:layout_constraintTop_toBottomOf="@+id/detailsTitleTextView"
            tools:layout_editor_absoluteX="16dp">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/shoeNameEditText"
                style="@style/EditTextDefault"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/shoe_name"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/companyTextInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_small"
            app:layout_constraintBottom_toTopOf="@+id/sizeTextInput"
            app:layout_constraintTop_toBottomOf="@+id/shoeNameTextInput"
            tools:layout_editor_absoluteX="16dp">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/companyEditText"
                style="@style/EditTextDefault"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/company"
                android:inputType="textCapWords" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/sizeTextInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_small"
            app:layout_constraintBottom_toTopOf="@+id/descriptionTextInput"
            app:layout_constraintTop_toBottomOf="@+id/companyTextInput"
            tools:layout_editor_absoluteX="16dp">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/sizeEditText"
                style="@style/EditTextDefault"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/size"
                android:inputType="number" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/descriptionTextInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_small"
            app:layout_constraintBottom_toTopOf="@+id/saveButton"
            app:layout_constraintTop_toBottomOf="@+id/sizeTextInput"
            tools:layout_editor_absoluteX="16dp">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/descriptionEditText"
                style="@style/EditTextDefault"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/description"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/saveButton"
            android:theme="@style/AppButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="@{() -> viewModel.addShoe(shoeNameEditText.getText().toString(), sizeEditText.getText().toString(), companyEditText.getText().toString(), descriptionEditText.getText().toString())}"
            android:layout_margin="@dimen/margin_small"
            android:text="@string/save"
            app:layout_constraintBottom_toTopOf="@id/cancelButton" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/cancelButton"
            android:theme="@style/AppButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_small"
            android:text="@string/cancel"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>